<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Login">

    <ScrollView
        android:id="@+id/login_"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >


            <View
                android:id="@+id/_bg__daftar__wali_murid_2"
                android:layout_width="@dimen/_411sdp"
                android:layout_height="@dimen/_846sdp"
                android:layout_marginStart="@dimen/_0sdp"
                android:layout_marginTop="@dimen/_0sdp"
                android:background="@drawable/_bg__daftar__wali_murid__shape" />

            <EditText
                android:id="@+id/masukkan_password"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="@dimen/_48sdp"
                android:layout_alignStart="@+id/rectangle_347"
                android:layout_alignEnd="@+id/rectangle_347"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_93sdp"
                android:layout_marginTop="@dimen/_310sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:background="@null"
                android:drawableRight="@drawable/password_toggle"
                android:elevation="@dimen/_6sdp"
                android:hint="@string/masukan_password_string"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/password"
                android:layout_width="@dimen/_165sdp"
                android:layout_height="@dimen/_17sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_63sdp"
                android:layout_marginLeft="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_302sdp"
                android:layout_marginEnd="@dimen/_166sdp"
                android:text="@string/password_string"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14sdp" />

            <View
                android:id="@+id/rectangle_347"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_29sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_63sdp"
                android:layout_marginTop="@dimen/_320sdp"
                android:layout_marginEnd="@dimen/_61sdp"
                android:background="@drawable/rectangle_347_shape"
                android:elevation="@dimen/_5sdp" />

            <TextView
                android:id="@+id/nama"
                android:layout_width="@dimen/_170sdp"
                android:layout_height="@dimen/_17sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_63sdp"
                android:layout_marginLeft="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_250sdp"
                android:layout_marginEnd="@dimen/_160sdp"
                android:text="@string/alamatEmail_string"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14sdp"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mengakses_fitur_yang_tersedia_di_teka_in_mobile_app" />

            <View
                android:id="@+id/rectangle_344"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_29sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_63sdp"
                android:layout_marginTop="@dimen/_270sdp"
                android:layout_marginEnd="@dimen/_61sdp"
                android:background="@drawable/rectangle_344_shape"
                android:elevation="@dimen/_5sdp" />

            <EditText
                android:id="@+id/masukan_AlamatEmail"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="@dimen/_48sdp"
                android:layout_alignStart="@+id/rectangle_344"
                android:layout_alignEnd="@+id/rectangle_344"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_260sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:background="@null"
                android:elevation="@dimen/_6sdp"
                android:hint="@string/masukan_AlamatEmail_string"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/silahkan_melakukan_pendaftaran_akun_anda_untuk_dapat"
                android:layout_width="@dimen/_323sdp"
                android:layout_height="@dimen/_17sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_200sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:maxLines="1"
                android:text="@string/silahkan_melakukan_pendaftaran_akun_anda_untuk_dapat_string"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_to_back" />

            <TextView
                android:id="@+id/mengakses_fitur_yang_tersedia_di_teka_in_mobile_app"
                android:layout_width="@dimen/_323sdp"
                android:layout_height="@dimen/_17sdp"
                android:layout_alignTop="@+id/silahkan_melakukan_pendaftaran_akun_anda_untuk_dapat"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:maxLines="1"
                android:text="@string/mengakses_fitur_yang_tersedia_di_teka_in_mobile_app_string"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/silahkan_melakukan_pendaftaran_akun_anda_untuk_dapat" />

            <TextView
                android:id="@+id/welcome_to_back"
                android:layout_width="@dimen/_98sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_66sdp"
                android:layout_marginTop="@dimen/_180sdp"
                android:text="@string/welcome_to_back_string"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/red_neutral_minimal_font_logo__2__transformed_1" />

            <ImageView
                android:id="@+id/red_neutral_minimal_font_logo__2__transformed_1"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="29dp"
                android:layout_marginTop="74dp"
                android:layout_marginEnd="31dp"
                android:contentDescription="red_neutral_minimal_font_logo__2__transformed_1"
                android:src="@drawable/red_neutral_minimal_font_logo__2__transformed_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lupa_password"
                android:layout_width="@dimen/_115sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_below="@+id/rectangle_347"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_170sdp"
                android:layout_marginLeft="@dimen/_245sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:text="@string/lupa_kata_sandi"
                android:textSize="@dimen/_11sdp"
                android:maxLines="1" />

            <View
                android:id="@+id/LoginButton"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_29sdp"
                android:layout_below="@+id/lupa_password"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_78sdp"
                android:background="@drawable/_rectangle_349_shape"
                android:elevation="@dimen/_5sdp" />


            <TextView
                android:id="@+id/daftar"
                android:layout_width="@dimen/_132sdp"
                android:layout_height="@dimen/_43sdp"
                android:layout_alignStart="@+id/LoginButton"
                android:layout_alignTop="@+id/LoginButton"
                android:layout_alignEnd="@+id/LoginButton"
                android:layout_alignBottom="@+id/LoginButton"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginStart="47dp"
                android:layout_marginTop="-12dp"
                android:layout_marginEnd="52dp"
                android:layout_marginBottom="-11dp"
                android:elevation="@dimen/_6sdp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/masuk_ek1_string"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/group_google"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_below="@+id/group_daftar"
                android:layout_marginLeft="@dimen/_77sdp"
                android:layout_marginTop="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/_7123025_logo_google_g_icon_1"
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_marginLeft="@dimen/_0sdp"
                    android:layout_marginTop="@dimen/_0sdp"
                    android:src="@drawable/_7123025_logo_google_g_icon_1" />

                <TextView
                    android:id="@+id/masuk_dengan_google"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:autoSizeMaxTextSize="@dimen/_100sdp"
                    android:autoSizeMinTextSize="@dimen/_12sdp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/masuk_dengan_google_string"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/group_daftar"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_below="@+id/LoginButton"
                android:layout_marginLeft="@dimen/_57sdp"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/daftar_text"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_17sdp"
                    android:layout_marginTop="@dimen/_0sdp"
                    android:layout_marginEnd="@dimen/_0sdp"
                    android:layout_marginStart="@dimen/_175sdp"
                    android:text="@string/Daftar"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/_apakah_anda_belum_memiliki_akun__masuk"
                    android:layout_width="@dimen/_190sdp"
                    android:layout_height="@dimen/_17sdp"
                    android:layout_marginStart="@dimen/_0sdp"
                    android:layout_marginTop="@dimen/_0sdp"
                    android:maxLines="1"
                    android:text="@string/_apakah_anda_belum_memiliki_akun_string"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>