<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Lupa_Password__kode">

    <ScrollView
        android:id="@+id/lupa_password_kode"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/_bg__lupa_password"
                android:background="@drawable/_bg__lupa_password_shape"
                android:layout_width="411dp"
                android:layout_height="846dp"/>

            <TextView
                android:id="@+id/forgot_your_password_"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_48sdp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_53sdp"
                android:gravity="center"
                android:text="@string/forgot_your_password__string"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/enter_your_email_address_and_we_will_share_a_link_to_create_a_new_password_"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/forgot_your_password_"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_0sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_0sdp"
                android:layout_marginEnd="@dimen/_0sdp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:maxLines="1"
                android:text="@string/masukkan_kode_jika_belum_masuk__string"/>

            <TextView
                android:id="@+id/enter_sendAgain"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/enter_your_email_address_and_we_will_share_a_link_to_create_a_new_password_"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_0sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_0sdp"
                android:layout_marginEnd="@dimen/_0sdp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:maxLines="2"
                android:text="@string/klik_kirim_ulang__string"/>

            <TextView
                android:id="@+id/kirim_ulang_kode"
                android:layout_width="@dimen/_127sdp"
                android:layout_height="@dimen/_29sdp"
                android:layout_marginLeft="@dimen/_270sdp"
                android:layout_marginTop="@dimen/_215sdp"
                android:text="Kirim ulang kode"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_160sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:maxLines="1"/>

            <RelativeLayout
                android:id="@+id/group_kirim"
                android:layout_width="@dimen/_128sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_95sdp"
                android:layout_marginTop="@dimen/_260sdp"
                android:elevation="@dimen/_6sdp">

                <TextView
                    android:id="@+id/send_ek1"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_0sdp"
                    android:layout_marginBottom="@dimen/_minus10sdp"
                    android:text="@string/send_ek1_string"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/vector"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:contentDescription="vector"
                    android:src="@drawable/vector" />

            </RelativeLayout>

            <View
                android:id="@+id/Button_Send"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_29sdp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="101dp"
                android:layout_marginTop="@dimen/_260sdp"
                android:layout_marginEnd="@dimen/_78sdp"
                android:background="@drawable/rectangle_63_shape"
                android:elevation="@dimen/_5sdp"
                android:onClick="sendVerifyEmail" />

            <RelativeLayout
                android:id="@+id/kode"
                android:layout_width="@dimen/_350sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_61sdp"
                android:layout_marginTop="@dimen/_185sdp">

                <View
                    android:id="@+id/rectangle_62"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_29sdp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/_0sdp"
                    android:layout_marginTop="@dimen/_0sdp"
                    android:layout_marginEnd="@dimen/_61sdp"
                    android:elevation="@dimen/_5sdp"
                    android:background="@drawable/rectangle_62_shape" />

                <EditText
                    android:id="@+id/masukan_kode"
                    android:layout_width="@dimen/_230sdp"
                    android:layout_height="@dimen/_48sdp"
                    android:layout_alignStart="@+id/rectangle_62"
                    android:layout_alignEnd="@+id/rectangle_62"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_minus3sdp"
                    android:layout_marginEnd="@dimen/_7sdp"
                    android:background="@null"
                    android:elevation="@dimen/_6sdp"
                    android:layout_marginLeft="@dimen/_50sdp"
                    android:inputType="number"
                    android:hint="@string/masukan_kode__string"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
