<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Login">

    <ScrollView
        android:id="@+id/lupa_password_baru"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/konfirmasi"
                android:layout_width="@dimen/_350sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_61sdp"
                android:layout_marginTop="@dimen/_230sdp">

                <View
                    android:id="@+id/BoxKon"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_29sdp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/_0sdp"
                    android:layout_marginTop="@dimen/_0sdp"
                    android:layout_marginEnd="@dimen/_61sdp"
                    android:background="@drawable/rectangle_62_shape"
                    android:elevation="@dimen/_5sdp" />

                <EditText
                    android:id="@+id/kofir_sandi_txt"
                    android:layout_width="@dimen/_230sdp"
                    android:layout_height="@dimen/_48sdp"
                    android:layout_alignStart="@+id/BoxKon"
                    android:layout_alignEnd="@+id/BoxKon"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_minus3sdp"
                    android:layout_marginEnd="@dimen/_7sdp"
                    android:background="@null"
                    android:elevation="@dimen/_6sdp"
                    android:hint="@string/konfirmasi_kata_sandi__string"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/NewPw"
                android:layout_width="@dimen/_350sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_61sdp"
                android:layout_marginTop="@dimen/_185sdp">

                <View
                    android:id="@+id/boxpWnEW"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="@dimen/_29sdp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/_0sdp"
                    android:layout_marginTop="@dimen/_0sdp"
                    android:layout_marginEnd="@dimen/_61sdp"
                    android:background="@drawable/rectangle_62_shape"
                    android:elevation="@dimen/_5sdp" />

                <EditText
                    android:id="@+id/sandi_baru_txt"
                    android:layout_width="@dimen/_230sdp"
                    android:layout_height="@dimen/_48sdp"
                    android:layout_alignStart="@+id/boxpWnEW"
                    android:layout_alignEnd="@+id/boxpWnEW"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_minus3sdp"
                    android:layout_marginEnd="@dimen/_7sdp"
                    android:background="@null"
                    android:elevation="@dimen/_6sdp"
                    android:hint="@string/masukan_kata_sandi_baru__string"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/group_kirim"
                android:layout_width="@dimen/_128sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_95sdp"
                android:layout_marginTop="@dimen/_300sdp"
                android:elevation="@dimen/_6sdp">

                <TextView
                    android:id="@+id/send_ek1"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_0sdp"
                    android:layout_marginBottom="@dimen/_minus10sdp"
                    android:text="@string/send_ek1_string"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/vector"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:contentDescription="vector"
                    android:src="@drawable/vector" />

            </RelativeLayout>

            <View
                android:id="@+id/Button_Send"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_29sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="101dp"
                android:layout_marginTop="@dimen/_300sdp"
                android:layout_marginEnd="101dp"
                android:background="@drawable/rectangle_63_shape"
                android:elevation="@dimen/_5sdp"
                android:onClick="sendVerifyEmail" />

            <TextView
                android:id="@+id/enter_new_pw"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@+id/forgot_your_password_"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_31sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_minus15sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/masukkan_kata_sandi_baru_dan_konfirmasi__string"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:maxLines="1" />

            <TextView
                android:id="@+id/forgot_your_password_"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_48sdp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_53sdp"
                android:gravity="center"
                android:text="@string/forgot_your_password__string"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />

            <View
                android:id="@+id/_bg__lupa_password"
                android:background="@drawable/_bg__lupa_password_shape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" /> <!-- Changed to wrap_content -->

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>